# gDel3D

./: .gitignore  CMakeLists.txt  MANIFEST.in  PACKAGE_USAGE.md  README.md  README.txt  README_ORIGINAL.md  demo_real_gdel3d.py  setup.py  test_real_gdel3d.py
GDelFlipping/src/: Demo.cu
GDelFlipping/src/gDel3D/: CommonTypes.h
GDelFlipping/src/gDel3D/GPU/: CudaWrapper.h  GPUDecl.h
gdel3d/: __init__.py
python_bindings/: CMakeLists.txt  demo.py  pyproject.toml  setup.py  single_unit.cu
python_bindings/src/: gdel_wrapper.cu  python_bindings.cpp
